--- a/prospera/src/Components/ContactPage/ContactPage.css
+++ b/prospera/src/Components/ContactPage/ContactPage.css
@@ -20,9 +20,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(35, 35, 35);
+    background-color: #232323;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border-radius: 30px;
+    border-radius: 15px;
     padding: 0 15px 0 15px;
 }
 
