--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -30,7 +30,7 @@
     border-radius: 20px;
     overflow: hidden;
     width: 74rem;
-    height: 57rem;
+    height: 53rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
@@ -148,11 +148,11 @@
     margin: 15px 0 0 0;
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
-    background-color: #1a1a1a;
+    background-color: #232323;
     color: #ffffff;
     font-size: 1rem;
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 15px;
     transition: all 0.4s ease;
     outline: none;
     position: relative;
