--- a/prospera/src/Components/RegisterPage/RegisterPage.css
+++ b/prospera/src/Components/RegisterPage/RegisterPage.css
@@ -102,11 +102,11 @@ div.imageArea img {
     margin: 15px 0 0 0;
     padding: 15px 20px;
     border: 2px solid #2c2c2c;
-    background-color: #1a1a1a;
+    background-color: #232323;
     color: #ffffff;
     font-size: 1rem;
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 15px;
     transition: all 0.4s ease;
     outline: none;
     position: relative;
