--- a/prospera/src/Components/Settings/Account.css
+++ b/prospera/src/Components/Settings/Account.css
@@ -34,6 +34,14 @@
     gap: 70px;
 }
 
+@media (max-width: 968px) {
+    .firstLastNames{
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
+    }
+}
+
 .firstLastNames .textInput{
     width: 85%;
 }
