--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -20,7 +20,7 @@
 }
 
 .reactGridItem {
-    background-color: #212121;
+    color: white;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
@@ -37,9 +37,9 @@
 }
 
 .widgetContent {
-    display: flex;
     overflow: hidden;
     padding: 10px;
+    color: white;
 }
 
 .newWidgetBtn{
@@ -90,17 +90,17 @@
     background: #292929;
 }
 
-.widgetEditBtns img{
-    width: 25px;
+.widgetEditBtns {
+    margin-top: 3px;
 }
 
 .widgetEditBtns button{
     background-color: transparent;
-    border-radius: 5px;
     border: none;
+    border-radius: 10px;
 }
 
 .widgetEditBtns button:hover {
     cursor: pointer;
-    background-color: white;
+    background-color: rgb(37, 37, 37);
 }
