--- a/prospera/src/Components/NewsWidget/NewsWidget.css
+++ b/prospera/src/Components/NewsWidget/NewsWidget.css
@@ -1,10 +1,65 @@
-.read-more {
-    color: rgb(210, 168, 255);
-    text-decoration: none;
-    font-weight: 500;
-}
-
 a.read-more {
     margin: 0;
     margin-bottom: 10px;
 }
+
+.news-widget {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .news-widget h2 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+  }
+  
+  .article-content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+  
+  .article-content figure {
+    width: 100%;
+    height: 40%;
+    margin: 0;
+    overflow: hidden;
+  }
+  
+  .article-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .article-content h3 {
+    font-size: 1em;
+    margin: 10px 0;
+  }
+  
+  .article-content .description {
+    font-size: 0.9em;
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    /* -webkit-line-clamp: 3; */
+    -webkit-box-orient: vertical;
+  }
+  
+  .read-more {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    color: rgb(210, 168, 255);
+    font-weight: bold;
+    padding: 10px 0;
+  }
+  
+  .read-more .icon {
+    margin-left: 5px;
+  }
