Testing the alignment of the chatbot messages.

--- a/prospera/src/Components/ChatbotPage/ChatbotPage.css
+++ b/prospera/src/Components/ChatbotPage/ChatbotPage.css
@@ -85,12 +85,14 @@
     background-color: #ba68c8; /* User message background */
     color: #fff;
     align-self: flex-start;
+    width: 90%;
 }
 
 .message.assistant {
     background-color: #9575cd; /* Assistant message background */
     color: #fff;
     align-self: flex-end;
+    width: 90%;
 }
 
 .inputContainer {
