--- a/prospera/src/Components/ChatbotPage/ChatbotPage.css
+++ b/prospera/src/Components/ChatbotPage/ChatbotPage.css
@@ -20,16 +20,17 @@
 
 .sidebar {
     width: 25%;
-    background-color: rgb(106, 27, 154, 0.6); /* Purple sidebar */
+    background-color: #232323; /* Purple sidebar */
     color: #fff;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
     border-radius: 5px 0px 0px 5px;
+    
 }
 
 .sidebar h2 {
     margin-top: 0;
-    border-bottom: 2px solid #4a148c; /* Dark purple underline */
+    border-bottom: 2px solid #f3e5f5b3; /* Dark purple underline */
     padding-bottom: 10px;
 }
 
@@ -42,7 +43,8 @@
 .sidebar ul li {
     padding: 10px;
     margin: 10px 0;
-    background-color: #8e24aa; /* Lighter purple for list items */
+    background-color: #f3e5f5b3; /* Lighter purple for list items */
+    color: #232323;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -50,13 +52,13 @@
 }
 
 .sidebar ul li:hover {
-    background-color: #ab47bc; /* Even lighter purple on hover */
+    background-color: #e1bee7; /* Even lighter purple on hover */
 }
 
 .chatArea {
     width: 75%;
     padding: 20px;
-    background-color: rgba(243, 229, 245, 0.7); /* Matching light purple background */
+    background-color: #f3e5f5b3; /* Matching light purple background */
     border-radius: 0px 5px 5px 0px;
 }
 
@@ -71,7 +73,6 @@
     overflow-y: auto;
     padding: 10px;
     background-color: #e1bee7; /* Very light purple background for messages */
-    border: 1px solid #ce93d8;
     border-radius: 10px;
     scroll-behavior: smooth;
 }
@@ -86,16 +87,16 @@
 .message.user {
     background-color: #ba68c8; /* User message background */
     color: #fff;
-    align-self: flex-start;
-    width: 90%;
+    align-self: flex-end;
+    width: 80%;
     font-size: 20px;
 }
 
 .message.assistant {
     background-color: #9575cd; /* Assistant message background */
     color: #fff;
-    align-self: flex-end;
-    width: 90%;
+    align-self: flex-start;
+    width: 98%;
     font-size: 20px;
 }
 
@@ -108,6 +109,7 @@
     flex: 1;
     padding: 10px;
     border: 1px solid #ce93d8;
+    background-color: #eeeeee;
     border-radius: 10px;
     margin-right: 10px;
     font-size: 20px;
@@ -118,13 +120,13 @@
     background-color: #8e24aa; /* Purple button */
     color: #fff;
     border: none;
-    border-radius: 10px;
+    border-radius: 7px;
     cursor: pointer;
     font-size: 20px;
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+.sidebar button:hover {
     background-color: #ab47bc; /* Lighter purple on hover */
 }
 
