Added some styling for the novu icon

--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -65,6 +65,10 @@
     font-weight: 500;
 }
 
+.mailIcon:hover{
+    cursor: pointer;
+}
+
 .auth-buttons{
     display: flex;
     justify-content: flex-end;
