Make updates to financial goal widget (add listName + update max height of widget)

--- a/prospera/src/Components/FinancialGoalsWidget/FinancialGoalsWidget.css
+++ b/prospera/src/Components/FinancialGoalsWidget/FinancialGoalsWidget.css
@@ -142,10 +142,15 @@
     margin: 0;
 }
 
+.financial-goals-widget h3 {
+  margin: 2px 0 0 2px;
+}
+
+
 .financial-goals-widget ul {
     list-style: none;
     padding: 0;
-    margin-top: 22px;
+    margin-top: 15px;
     margin-left: 10px;
 }
 
