Inital color change

--- a/prospera/src/index.css
+++ b/prospera/src/index.css
@@ -1,7 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(#5735df 0%, #000000 100%);
+  /* background: linear-gradient(#5735df 0%, #000000 100%); */
+  background-color: #ffffff;
   background-repeat:no-repeat;
   background-size: cover;
   scroll-behavior: smooth;
