--- a/prospera/src/Components/ContactPage/ContactPage.css
+++ b/prospera/src/Components/ContactPage/ContactPage.css
@@ -14,6 +14,12 @@
 .contactTitle h1 {
     font-size: 2.5rem;
     color: #fff;
+    font-weight: 700;
+}
+
+.contactTitle span {
+    color: #af84f4;
+    font-weight: 700;
 }
 
 .contactTitle {
@@ -21,7 +27,8 @@
     flex-direction: column;
     align-items: center;
     background-color: #232323;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 15px;
     padding: 0 15px 0 15px;
 }
@@ -51,12 +58,15 @@
     justify-content: center;
     align-items: center;
     gap: 125px;
-    color: #fff;
+    color: #000;
     margin-bottom: 100px;
 }
 
 .contactIcon svg{
     width: 60px;
+    background-color: #000;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 .leftContactPageContent {
@@ -90,11 +100,12 @@
     justify-content: center;
     align-items: center;
     padding: 35px 50px 35px 50px;
-    color: #fff;
+    color: #000;
 
     border-radius: 7px;
 
-    background-color: rgba(255, 255, 255, 0.3);
+    /* background-color: rgba(255, 255, 255, 0.3); */
+    background-color: rgba(175, 132, 244, 0.4);
 }
 
 .rightContactPageContent textarea {
