--- a/prospera/src/Components/ProgressCircleWidget/ProgressCircleWidget.css
+++ b/prospera/src/Components/ProgressCircleWidget/ProgressCircleWidget.css
@@ -1,3 +1,17 @@
 .progressArea {
     display: flex;
+    
+}
+
+.progressInfo {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 20px;
+    gap: 0;
+}
+
+.progressInfo p {
+    margin-top: 7px;
+    margin-bottom: 0;
 }
