Continue with countdown timer styling changes

--- a/prospera/src/Components/CountdownTimerWidget/CountdownTimerWidget.css
+++ b/prospera/src/Components/CountdownTimerWidget/CountdownTimerWidget.css
@@ -33,7 +33,7 @@
   .countdown-timer-widget .time-value {
     font-size: 2em;
     font-weight: bold;
-    color: #007bff;
+    color: #7700b7;
   }
   
   .countdown-timer-widget .time-label {
