--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -94,11 +94,23 @@ hr {
 }
 
 @media screen and (max-width: 768px) {
+    .innerFooterCont{
+        align-items: center;
+        flex-direction: column;
+    }
+    .footerRight{
+        flex-direction: column;
+    }
+    .footerLinks{
+        width: 100%;
+        margin-top: 20px;
+    }
     .socials {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         text-align: center;
+        margin-top: 20px;
     }
 
     .socials a {
