--- a/prospera/src/Components/Settings/Account.css
+++ b/prospera/src/Components/Settings/Account.css
@@ -2,12 +2,53 @@
     height: 81px;
 }
 
+.settingsBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    margin: 4rem 0 7rem 0;
+}
+
+.settingsTop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30vw;
+    height: 100%;
+}
+
+.settingsTop img{
+    border-radius: 50%;
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+.settingsTop h2{
+    margin: 15px 10px;
+}
+
+.settingsTop h3{
+    margin: 0px 10px;
+    margin-bottom: 30px;
+}
+
+.test{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    width: 100%;
+}
+
 .updaterUserInfoSpace {
     position: relative;
     background-color: #fff;
     color: #000;
 
-    margin: 20px 15px;
+    margin: 20px 150px;
     border-radius: 5px;
 
     margin-bottom: 70px;
@@ -18,7 +59,20 @@
     align-items: center;
     justify-content: center;
 
-    height: 60vh;
+
+    border-radius: 20px;
+    overflow: hidden;
+    width: 74rem;
+    height: 47rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 8px 0px;
+
+}
+
+.updaterUserInfoSpace h1 {
+    width: 100%;
+    padding: 0;
+    margin: 45px 10px;
+    text-align: center;
 }
 
 #updateForm input {
@@ -34,16 +88,35 @@
     gap: 70px;
 }
 
-@media (max-width: 968px) {
+@media (max-width: 1195px) {
     .firstLastNames{
         flex-direction: column;
         gap: 20px;
         width: 100%;
     }
+
+    .updaterUserInfoSpace{
+        margin: 20px 30px;
+        margin-bottom: 50px;
+        height: auto;
+    }
+
+    .test{
+        flex-direction: column;
+    }
+    
+    .settingsTop{
+        width: 100%;
+    }
+
+    .acctButtons{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
 
-.firstLastNames .textInput{
-    width: 85%;
+.firstLastNames .textInput {
+    width: 100%;
 }
 
 .textInput {
