Working on updating widget content, especially reflecting updates on highlighted goal widgets

--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -103,7 +103,7 @@
 
 .widgetEditBtns button:hover {
     cursor: pointer;
-    background-color: rgb(37, 37, 37);
+    background-color: #27004e;
 }
 
 hr {
