--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -197,4 +197,8 @@
     .landingCardContainer {
         margin-top: 50px;
     }
+
+    #contactPage, #aboutPage{
+        overflow: hidden;
+    }
 }
